--- a/0x02-CSS_advanced/styles/12-style.css
+++ b/0x02-CSS_advanced/styles/12-style.css
@@ -19,7 +19,7 @@
     --line-height-big: 1.8;
     --section-header-align: center;
     --section-tagline-transform: uppercase;
-    --section-title-margin: 0;
+    --section-title-margin: 0px;
     --section-title-color: var(--text-color);
 }
 
