--- a/0x02-CSS_advanced/styles/12-style.css
+++ b/0x02-CSS_advanced/styles/12-style.css
@@ -19,7 +19,7 @@
     --line-height-big: 1.8;
     --section-header-align: center;
     --section-tagline-transform: uppercase;
-    --section-title-margin: 0px;
+    --section-title-margin: 0;
     --section-title-color: var(--text-color);
 }
 
@@ -61,6 +61,7 @@ a {
 .section-title {
     font-family: var(--font-family-title);
     font-size: var(--font-size-xx-large);
+    font-weight: var(--font-weight-bold);
     margin: var(--section-title-margin);
     color: var(--section-title-color);
 }
