--- a/0x02-CSS_advanced/styles/12-style.css
+++ b/0x02-CSS_advanced/styles/12-style.css
@@ -20,7 +20,7 @@
     --section-header-align: center;
     --section-tagline-transform: uppercase;
     --section-title-margin: 0;
-    --section-title-color: var(--text-color);
+    --section-title-color: var(--color-black);
 }
 
 html {
