--- a/0x02-CSS_advanced/styles/15-style.css
+++ b/0x02-CSS_advanced/styles/15-style.css
@@ -46,7 +46,7 @@ button,select{text-transform:none}
     --section-title-color: var(--color-black);
 }
 
-* {
+.box {
     box-sizing: border-box;
 }
 
