--- a/0x02-CSS_advanced/styles/15-style.css
+++ b/0x02-CSS_advanced/styles/15-style.css
@@ -26,8 +26,8 @@
     --section-title-color: var(--color-black);
 }
 
-* {
-    box-sizing: content-box;
+*, *:before, *:after {
+    box-sizing: border-box;
 }
 
 html {
