--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -78,7 +78,7 @@ body {
 
 .nav .nav-link {
     display: block;
-    padding: 0.2rem 1rem 0.5rem 1rem;
+    padding: 0.5rem 1rem;
 }
 
 .nav .nav-link:hover {
