--- a/0x02-CSS_advanced/styles/20-style.css
+++ b/0x02-CSS_advanced/styles/20-style.css
@@ -116,7 +116,7 @@ a:active {
     color: var(--color-primary);
 }
 
-.row {
+.row::after {
     display: table;
     content: none;
     clear: both;
