--- a/0x02-CSS_advanced/styles/23-style.css
+++ b/0x02-CSS_advanced/styles/23-style.css
@@ -206,8 +206,7 @@ ul.row {
 }
 
 .social-link svg {
-    display: block;
-    fill: var(--text-color);
+    color: var(--text-color);
 }
 
 .footer {
