--- a/0x02-CSS_advanced/styles/23-style.css
+++ b/0x02-CSS_advanced/styles/23-style.css
@@ -205,8 +205,8 @@ ul.row {
     display: block;
 }
 
-.social-link svg {
-    color: var(--text-color);
+svg {
+    fill: var(--text-color);
 }
 
 .footer {
