--- a/0x02-CSS_advanced/styles/23-style.css
+++ b/0x02-CSS_advanced/styles/23-style.css
@@ -202,10 +202,10 @@ ul.row {
 }
 
 .social-link {
-    display: block;
+    display: inline-block;
 }
 
-svg {
+.social-link svg {
     fill: var(--text-color);
 }
 
