--- a/0x02-CSS_advanced/styles/27-style.css
+++ b/0x02-CSS_advanced/styles/27-style.css
@@ -228,7 +228,7 @@ a:active {
 }
 
 .section-hero .section-inner {
-    padding: 10rem, 40rem, 2rem, 0;
+    padding: 10rem 40rem 2rem 0;
 }
 
 ul.row {
