--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -214,6 +214,15 @@ a:active {
     padding-top: 45%;
 }
 
+.card-work .card-title a::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    content: '';
+}
+
 .card-work:hover .card-title {
     opacity: 1;
 }
