--- a/0x03-responsive_design/07-styles.css
+++ b/0x03-responsive_design/07-styles.css
@@ -164,6 +164,18 @@
     color: var(--color-primary);
     background: var(--color-white);
   }
+
+@media screen and (max-width: 480px) {
+    html {
+        font-size: 57%;
+    }
+}
+
+@media screen and (min-width: 481px) and (max-width: 767px) {
+    html {
+        font-size: 60%;
+    }
+}
   
   /* Helpers
       ============================= */
