--- a/0x03-responsive_design/08-styles.css
+++ b/0x03-responsive_design/08-styles.css
@@ -164,6 +164,18 @@
     color: var(--color-primary);
     background: var(--color-white);
   }
+
+@media screen and (max-width: 480px) {
+    html {
+        font-size: 57%;
+    }
+}
+
+@media screen and (min-width: 481px) and (max-width: 767px) {
+    html {
+        font-size: 60%;
+    }
+}
   
   /* Helpers
       ============================= */
@@ -655,6 +667,22 @@
   
   .card-work:hover .card-title {
     opacity: 1;
+  }
+
+  @media screen and (max-width: 767px) {
+    .card-work .card-inner {
+      --text-color: var(--color-white);
+      color: var(--text-color);
+      position: relative;
+    }
+
+    .card-work .card-title {
+        opacity: 1;
+    }
+
+    .card-work .card-title a {
+        padding: 2rem 1rem 0 1rem;
+    }
   }
   
   /* Card SERVICES
