--- a/0x03-responsive_design/09-styles.css
+++ b/0x03-responsive_design/09-styles.css
@@ -164,6 +164,18 @@
     color: var(--color-primary);
     background: var(--color-white);
   }
+
+@media screen and (max-width: 480px) {
+    html {
+        font-size: 57%;
+    }
+}
+
+@media screen and (min-width: 481px) and (max-width: 767px) {
+    html {
+        font-size: 60%;
+    }
+}
   
   /* Helpers
       ============================= */
@@ -454,6 +466,20 @@
   .social-link > svg {
     fill: var(--text-color);
   }
+
+  @media screen and (max-width: 767px) {
+    :root {
+        --footer-padding: 5rem 2rem 1rem;
+    }
+
+    .footer .social.nav, .footer .footer-nav {
+        text-align: center;
+    }
+
+    .social.nav li + li, .footer-nav li + li {
+        padding-left: 2rem;
+    }
+  }
   
   /*** 3. SECTION ***/
   
@@ -655,6 +681,22 @@
   
   .card-work:hover .card-title {
     opacity: 1;
+  }
+
+  @media screen and (max-width: 767px) {
+    .card-work .card-inner {
+      --text-color: var(--color-white);
+      color: var(--text-color);
+      position: relative;
+    }
+
+    .card-work .card-title {
+        opacity: 1;
+    }
+
+    .card-work .card-title a {
+        padding: 2rem 1rem 0 1rem;
+    }
   }
   
   /* Card SERVICES
