Task 10 fix, Task 11

--- a/0x03-responsive_design/100-styles.css
+++ b/0x03-responsive_design/100-styles.css
@@ -802,6 +802,7 @@
   .post {
     display: flex;
     align-items: baseline;
+    margin: 0 2rem;
   }
   
   .post-content {
@@ -829,6 +830,17 @@
     font-size: var(--font-size-small);
     color: var(--color-grey);
     text-align: center;
+  }
+
+  @media screen and (max-width: 767px) {
+    .post {
+        flex-direction: column;
+        margin: 2rem;
+    }
+
+    .post-content {
+        padding-left: 0;
+    }
   }
   
   /* Post Meta
@@ -891,6 +903,14 @@
   
   .post-comments .section-title {
     font-variant: small-caps;
+  }
+
+  @media screen and (max-width: 767px) {
+    .post-comments {
+        width: calc(100% - 4rem);
+        margin: 2rem;
+        padding: 0;
+    }
   }
   
   /* Basic form
